# shuttle_ground_touch_detector

./: README.md  shuttle_clips_in_sequences_dataset.py  squeezenet_one_channel_two_heads_with_positions.py  train_3_3.py  two_heads_loss_1_5.py  utils.py
speed_test/: generate.sh
speed_test/source/: CMakeLists.txt  convert_model_for_jit_c++_usage.py  convert_model_for_onnx_c++_usage.py  script_jit.cxx  trace_onnx.cxx
